# python-container-dev-env

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/composite/setup/: action.yml
backend/: main.py  schemas.py
tests/: test_api.py
