[tool.poetry]
name = "python-container-dev-env"
version = "0.1.0"
description = ""
authors = ["yng87 <k.yanagi07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = { extras = ["all"], version = "^0.109.1" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.1"
mypy = "^1.6.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

unfixable = [
    "F401", # module imported but unused
    "F841", # local variable is assigned to but never used
]

[tool.mypy]
python_version = 3.8
strict = true

[tool.black]
target-version = ['py38']
line-length = 100
